syntax = "proto3";

package file_upload.v1;

message FileUploadRequest {
  string file_name = 1;
  bytes chunk = 2;
}

message FileUploadResponse {
  string file_name = 1;
  uint32 size = 2;
}

service FileUploadService {
  rpc UploadFile(stream FileUploadRequest) returns (FileUploadResponse);
}