syntax = "proto3";

package proto;

message File {
  string name = 1;
  string path = 2;
  uint32 size = 3;
  string thumbnail = 4;
}

message FileUploadResponse {
  optional File file = 1;
}

message GetFilesResponse {
  repeated File files = 1;
}

message PingRequest {
  int64 number = 1;
  string text = 2;
}

message PingResponse {
  int64 number = 1;
  string text = 2;
}

message FailRequest {
  int32 code = 1;
}

message FailResponse {}


service PingService {
  rpc Ping(PingRequest) returns (PingResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
  };

  rpc Fail(FailRequest) returns (FailResponse);
}
